[workspace]
members = [
  ".",
  "xlock/bindings",
  "xlock/mode",
]

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"

[package]
name = "tetromino"
version = "0.2.2"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/tetromino"
repository = "https://github.com/d-e-s-o/tetromino.git"
readme = "README.md"
categories = [
  "games",
  "graphics",
  "gui",
  "rendering",
]
keywords = [
  "2d",
  "game",
  "linux",
  "opengl",
  "tetris",
]
description = """
A graphical Tetris clone.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tetromino_impl"

[features]
default = []
# Enable miscellaneous debug functionality.
debug = []

# Enable this feature to re-generate the OpenGL bindings. This is
# generally not relevant to users.
generate-opengl-bindings = ["gl_generator"]
# Enable code paths requiring a nightly toolchain. This feature is only
# meant to be used for testing and benchmarking purposes. The game
# itself is expected to work on stable.
nightly = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[profile.bench]
debug = true

[build-dependencies]
gl_generator = {version = "0.14", optional = true, default-features = false}
grev = {version = "0.1.3", default-features = false}

[dependencies]
anyhow = {version = "1.0.72", default-features = false, features = ["std"]}
bufio = {version = "0.1"}
dirs = {version = "6.0", default-features = false}
glutin = {version = "0.32", default-features = false, features = ["glx", "x11"]}
image = {version = "0.25", default-features = false, features = ["png"]}
keypeat = {version = "0.1"}
serde = {version = "1.0.182", default-features = false, features = ["derive", "std"]}
toml = {version = "0.9", default-features = false, features = ["display", "parse", "serde"]}
vema = {version = "0.1"}
winit = {version = "0.30", default-features = false, features = ["rwh_06", "x11"]}
x11-dl = {version = "2.21.0", default-features = false}
xgl = {version = "0.2"}

[dev-dependencies]
test-fork = {version = "0.1.2"}

[lints]
workspace = true
