[package]
name = "tetromino-xlock-mode"
version = "0.1.2"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/tetromino"
repository = "https://github.com/d-e-s-o/tetromino.git"
readme = "README.md"
categories = [
  "api-bindings",
  "authentication",
  "games",
  "os::unix-apis",
]
keywords = [
  "authentication",
  "screenlock",
  "tetris",
  "x11",
  "xlock",
]
description = """
An xlock "mode" using Tetromino and its auto-playing AI.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
xlock = {version = "0.1", package = "tetromino-xlock-bindings", path = "../bindings"}
tetromino = {version = "0.2.2", path = "../.."}
raw-window-handle = {version = "0.6", default-features = false}
